k8s/network/service-external-ip.yaml
# Not working on docker for mac, perhaps should work on a real cluster.


kind: Service
apiVersion: v1
metadata:
  name: google-ip-svc
spec:
  ports:
    - port: 80


---

kind: Endpoints
apiVersion: v1
metadata:
  name: google-ip-svc-ep
subsets:
  - addresses:
      # www.google.com IP
      - ip: 172.217.166.100
    ports:
      - port: 80
