k8s/network/service-external-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: google-name-svc
spec:
  type: ExternalName
  externalName: www.google.com
