k8s/network/service-headless-pod-dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-explorer-pod1
  labels:
    app: k8s-explorer
spec:
  hostname: k8s-explorer-pod1
  subdomain: k8s-explorer-svc
  containers:
    - name: k8s-explorer-container
      image: k8s-explorer
      ports:
        - containerPort: 7000
      imagePullPolicy: Never

---

apiVersion: v1
kind: Pod
metadata:
  name: k8s-explorer-pod2
  labels:
    app: k8s-explorer
spec:
  hostname: k8s-explorer-pod2
  subdomain: k8s-explorer-svc
  containers:
    - name: k8s-explorer-container
      image: k8s-explorer
      ports:
        - containerPort: 7000
      imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name: k8s-explorer-svc
spec:
  clusterIP: None
  #publishNotReadyAddresses=True
  selector:
    app: k8s-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000
