k8s/network/service-headless.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-explorer-headless-pod
  labels:
    app: k8s-explorer
spec:
  containers:
    - name: k8s-explorer-container
      image: k8s-explorer
      ports:
        - containerPort: 7000
      imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name: k8s-explorer-headless-svc
spec:
  clusterIP: None
  selector:
    app: k8s-explorer
  ports:
    - protocol: TCP
      port: 7000
