k8s/network/ingress-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-explorer-ing-pod
  labels:
    app: k8s-explorer
spec:
  containers:
    - name: k8s-explorer-container
      image: k8s-explorer
      ports:
        - containerPort: 7000
      imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name: k8s-explorer-ing-svc
spec:
  selector:
    app: k8s-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-explorer-ingress
spec:
  backend:
    serviceName: k8s-explorer-ing-svc
    servicePort: 80
