k8s/network/ingress-fanout.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-explorer-ing1-pod
  labels:
    app: k8s-explorer
spec:
  containers:
    - name: k8s-explorer-container
      image: k8s-explorer
      ports:
        - containerPort: 7000
      imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name: k8s-explorer-ing1-svc
spec:
  selector:
    app: k8s-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000

---

apiVersion: v1
kind: Pod
metadata:
  name: k8s-explorer-ing2-pod
  labels:
    app: k8s-explorer
spec:
  containers:
    - name: k8s-explorer-container
      image: k8s-explorer
      ports:
        - containerPort: 7000
      imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name: k8s-explorer-ing2-svc
spec:
  selector:
    app: k8s-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-explorer-ingress-fanout
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: k8s-explorer-ing1-svc
              servicePort: 80
          - path: /bar
            backend:
              serviceName: k8s-explorer-ing2-svc
              servicePort: 80
